--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>라오스 비엔티안(1박) - 방비엥 (2박) C-Pack 빠른견적</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=480,user-scalable=no">
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script>
     (function(){ emailjs.init('luKxEKdyyvY4hjYfo'); })();
@@ -12,98 +12,104 @@
     html { font-size:15px;}
     body { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; background: #f7f7fa; margin: 0; padding: 0; color: #222; font-size:1rem;}
     .container { max-width: 880px; margin:32px auto; padding: 24px; background: #fff; border-radius: 18px; box-shadow: 0 2px 14px rgba(70, 85, 110, 0.12); }
+    .form-grid { display: flex; flex-wrap: wrap; gap: 32px;}
+    .form-col { flex: 1 1 0; min-width: 0; display: flex; flex-direction: column; gap: 0;}
+    .form-col.left, .form-col.right { min-width: 300px; flex-basis: 48%;}
 
-    /* 2단 컬럼 (PC) */
-    .form-grid { display: flex; flex-wrap: wrap; gap: 32px; }
-    .form-col { flex: 1 1 0; min-width: 0; display: flex; flex-direction: column; gap: 0; }
-    .form-col.left { min-width: 300px; flex-basis: 48%;}
-    .form-col.right { min-width: 300px; flex-basis: 48%;}
-
+    /* ===== 기본 스타일 ===== */
     .section, .date-section, .result-section, .contact-section { margin-bottom: 24px; }
     h1 { font-size: 1.18rem; font-weight: bold; text-align: center; margin-bottom: 24px; color: #14508e; letter-spacing: -1px;}
-    .result-section .result-title { font-size: 1.21em; font-weight: bold; color: #17508e; margin-bottom: 2px; }
-    .result-section .result-desc { font-size: 0.95em; color: #989898; margin-bottom: 10px; }
-    .result-section .result-big { font-size: 1.5em; font-weight: 700; color: #d02b2b; margin-left: 3px; }
-
-    /* 소제목 크기(PC) */
-    .section-label-row label, .section > label, .date-label { font-size: 1.10em; font-weight: 700; }
-
-    /* 섹션 라벨/초기화 flex */
-    .section-label-row { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px; gap:8px;}
-    .section-label-row .init-btn, .section-label-row .room-single-btn { margin-left:auto; }
-    .section-label-row .room-single-btn { margin-right:7px;}
-
-    .person-desc { color:#b04d0c; font-size:0.85em; margin-top:5px; margin-bottom:-12px;}
+    .section-label-row { display:flex; align-items:center; justify-content:space-between; margin-bottom:8px;}
+    .section label, .date-label { font-weight: 700; font-size: 1.06rem; color: #294a6b;}
+    .person-desc { color:#b04d0c; font-size:0.92em; margin-top:5px; margin-bottom:-12px; font-weight:600;}
     .toggle-group { display: flex; gap: 7px; flex-wrap: wrap; margin-top: 7px;}
-    .toggle-btn { background: #f4f7fb; border: 1.2px solid #c5d4ee; border-radius: 10px; padding: 9px 0 7px 0; font-size: 1em; flex: 1 1 0; text-align: center; cursor: pointer; margin-bottom: 6px; min-width: 42px; transition: all 0.12s; position: relative;}
+    .toggle-btn { background: #f4f7fb; border: 1.2px solid #c5d4ee; border-radius: 10px; padding: 9px 0 7px 0; font-size: 1em; flex: 1 1 0; text-align: center; cursor: pointer; margin-bottom: 6px; min-width: 42px; transition: all 0.12s; position: relative; font-weight:700;}
     .toggle-btn.selected { background: #296bb3; color: #fff; border-color: #14508e;}
     .option-list { margin-top: 6px;}
-    .option-row { position:relative; display: flex; align-items: center; justify-content: space-between; background:#f4f7fb; border:1px solid #d0deeb; border-radius:10px; padding: 11px 14px 11px 14px; margin-bottom: 7px; min-height:38px; font-size:1em; cursor:pointer; transition:background .18s, color .18s;}
+    .option-row { display: flex; align-items: center; justify-content: space-between; background:#f4f7fb; border:1px solid #d0deeb; border-radius:10px; padding: 11px 14px 11px 14px; margin-bottom: 7px; min-height:38px; font-size:1em; cursor:pointer; transition:background .18s, color .18s; position:relative; font-weight:700;}
     .option-row.selected { background: #296bb3; color: #fff; border-color: #14508e;}
     .option-title { font-size: 1.01em; flex:2;}
     .option-unit { flex:1.4; font-size: 0.96em; color:#1849b9; text-align:center; transition:color .15s;}
     .option-row.selected .option-unit { color:#fff;}
-    .option-total { flex:2.1; font-size: 0.97em; color:#d02b2b; font-weight:bold; text-align:right;}
-    .option-row.selected .option-total { color: #ffe400; }
-    .option-controls {display:flex; align-items:center; gap:7px;}
-    .option-minus-btn {background:#e9e7ff; color:#2857a3; border:1px solid #bdd2ea; font-size:0.96em; border-radius:7px; padding:3px 8px; margin-right:4px; cursor:pointer;}
+    .option-controls {display:flex; align-items:center; gap:7px; position:relative;}
+    .option-minus-btn {background:#e9e7ff; color:#2857a3; border:1px solid #bdd2ea; font-size:1.06em; border-radius:7px; padding:3px 8px; margin-right:4px; cursor:pointer; font-weight:700; transition: background 0.12s;}
     .option-minus-btn:active {background:#c9e2ff;}
-    .init-btn { font-size:0.92em; background:#e5eefe; border:1px solid #bdd2ea; border-radius:8px; color:#347; padding:4px 10px; cursor:pointer; }
+    .option-total { flex:2.1; font-size: 1.13em; color:#ffe400; font-weight:bold; text-align:right;}
+    .option-row.selected .option-total { color: #ffe400; }
+    .init-btn, .room-single-btn { font-size:1.07em; font-weight:700; border-radius:10px;}
+    .init-btn { background:#e5eefe; border:1px solid #bdd2ea; color:#347; padding:4px 13px; cursor:pointer; margin-left:7px; }
     .init-btn:hover {background:#d1e8ff;}
-    .result-section { margin: 20px 0 17px 0; padding: 13px 7px 8px 7px; background: #f4f6fa; border-radius: 12px; text-align: center; font-size: 1.05em; color: #14508e; font-weight: 600;}
-    .result-section span { display: block; margin: 6px 0; font-weight: 500; color: #0c3d5a; font-size: 0.97em;}
-    .contact-section { margin-bottom: 20px; background: #f9fafb; border-radius: 12px; padding: 12px 8px 7px 8px;}
-    .contact-label { display: block; margin: 10px 0 5px 2px; color: #37629d; font-size: 0.96em; font-weight: 500;}
-    .contact-input { width: 100%; padding: 8px 8px; border: 1px solid #bfd2e9; border-radius: 8px; font-size: 1em; margin-bottom: 3px; box-sizing: border-box; background: #f7fafc; font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif; }
-    textarea.contact-input { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif !important; resize: vertical;}
-    .submit-btn { display: block; width: 100%; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 13px 0; font-size: 1em; font-weight: 700; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
-    .submit-btn:active { background: #2a8ad1;}
-    .room-single-btn {background:#fff7e0; color:#b26c18; border:1px solid #edd59c; font-size:0.92em; border-radius:7px; padding:4px 12px; margin-right:7px; cursor:pointer;}
+    .room-single-btn {background:#fff7e0; color:#b26c18; border:1px solid #edd59c; padding:4px 14px; margin-right:7px; cursor:pointer;}
     .room-single-btn:active {background:#ffeec4;}
-    .date-section {margin-bottom:22px;}
-    .date-label {font-weight:700; color:#294a6b; font-size:1.05em; margin-bottom:10px; display:block;}
     .date-input-wrap {display:flex; align-items:center; background:#f4f7fb; border-radius:10px; border:1.2px solid #c5d4ee; padding:12px 13px;}
     .date-input {border:none; background:transparent; font-size:1em; color:#1849b9; flex:1;}
     .date-input:focus {outline:none;}
     .date-icon {font-size:1.2em; color:#14508e; margin-right:9px;}
+    .contact-label { display: block; margin: 10px 0 5px 2px; color: #37629d; font-size: 1.08em; font-weight: 700;}
+    .contact-input { width: 100%; padding: 8px 8px; border: 1px solid #bfd2e9; border-radius: 8px; font-size: 1.09em; margin-bottom: 3px; box-sizing: border-box; background: #f7fafc; font-weight:700;}
+    textarea.contact-input { font-family: 'Pretendard', 'Noto Sans KR', Arial, sans-serif !important; resize: vertical;}
+    .submit-btn { display: block; width: 100%; background: linear-gradient(90deg, #1466b6 88%, #25a6d1 100%); color: #fff; border: none; border-radius: 12px; padding: 13px 0; font-size: 1.09em; font-weight: 700; margin-top: 22px; cursor: pointer; transition: background 0.15s; letter-spacing: 0.5px; box-shadow: 0 2px 10px #4176a72c;}
+    .submit-btn:active { background: #2a8ad1;}
 
-    /* 2단 → 1단 (모바일) + 소제목/옵션 더 크게 */
+    /* ===== 결과 견적 섹션 ===== */
+    .result-section { margin: 20px 0 17px 0; padding: 13px 7px 8px 7px; background: #f4f6fa; border-radius: 12px; text-align: center; font-size: 1.13em; color: #14508e; font-weight: 700;}
+    .result-section .result-title {
+      font-size: 1.33em; font-weight: bold; color: #17508e; margin-bottom: 2px; letter-spacing:-1px;
+    }
+    .result-section .result-desc {
+      font-size: 1em; color: #989898; margin-bottom: 13px; font-weight:500;
+    }
+    .result-section .result-big {
+      font-size: 1.6em; font-weight: 700; color: #d02b2b; margin-left: 3px;
+    }
+
+    /* ===== 모바일 스타일 ===== */
     @media (max-width: 900px) {
       .container { max-width: 99vw; padding: 7vw 2vw;}
       .form-grid { flex-direction: column; gap: 0;}
       .form-col.left, .form-col.right { flex-basis: 100%; min-width: 0;}
+      h1 { font-size: 1.21rem;}
     }
     @media (max-width: 700px) {
-      html {font-size:14px;}
-      .container { max-width: 99vw; padding: 7vw 2vw;}
-      .toggle-btn { font-size: 1.12em; min-width: 30px; padding: 10px 0 8px 0;}
-      .option-row { font-size:1.14em; flex-direction:column; align-items:flex-start; gap:5px; padding: 12px 9px 27px 9px; }
-      .option-unit { font-size:1.12em; }
-      .option-controls { margin-top:0; margin-left:0; flex-direction:column; gap:0;}
-      .init-btn, .room-single-btn { font-size:1.09em; padding: 6px 14px;}
-      .init-btn { margin-left: 10px;}
-      .room-single-btn { margin-left:10px; margin-right:0;}
-      .section-label-row label, .section > label, .date-label { font-size: 1.26em !important; }
-      .result-section .result-title { font-size: 1.35em;}
-      .result-section .result-desc { font-size: 1.08em;}
-      .result-section .result-big { font-size: 1.8em;}
-      /* 선택관광 옵션 우측하단 가격/총인원 */
-      .option-row .option-total {
-        position:absolute; right:14px; bottom:10px;
-        font-size:1.24em; color:#ffe400; background:transparent; width:auto; text-align:right;
-        margin:0; padding:0;
+      html {font-size:14.3px;}
+      h1 { font-size: 1.17rem; }
+      .section label, .date-label { font-size: 1.24rem;}
+      .result-section .result-title { font-size: 1.5em;}
+      .result-section .result-desc { font-size: 1.19em;}
+      .result-section .result-big { font-size: 2.1em;}
+      .option-row { font-size:1.13em; min-height:58px; flex-direction:column; align-items:flex-start; gap:4px; padding: 10px 7px 15px 7px;}
+      .option-title { font-size: 1.12em; margin-bottom:0; font-weight:700;}
+      .option-unit { font-size: 1.05em; color:#b1e0f7; margin-top:0;}
+      .option-row.selected .option-unit { color: #fff;}
+      .option-controls { width: 100%; }
+      .option-minus-btn {
+        font-size: 1.19em !important;
+        padding: 1px 11px !important;
+        border-radius: 8px !important;
+        position: absolute;
+        top: 6px; right: 11px;
+        z-index: 2;
       }
-      /* -1명 버튼 우상단 */
-      .option-row .option-minus-btn {
-        position:absolute; right:14px; top:10px;
-        font-size:1.18em; padding:7px 14px;
-        background:#cfe6fd;
-        z-index:2;
+      .option-total {
+        font-size: 1.22em !important;
+        position: absolute;
+        right: 14px;
+        bottom: 7px;
+        text-align: right;
+        color: #ffe400;
+        background: transparent;
+        font-weight: 800;
       }
+      .option-row.selected .option-total { color: #ffe400; }
+      .section-label-row {flex-direction:row; align-items:center;gap:0;}
+      .init-btn, .room-single-btn { font-size: 1.09em; border-radius: 10px; margin-left:9px;}
+      .init-btn, .room-single-btn {margin-top:0;}
+      .room-single-btn {padding:4px 14px;}
     }
   </style>
 </head>
 <body>
+<!-- =================== 견적 폼 본문 =================== -->
 <div class="container" id="cpack-quickform">
   <h1>라오스 비엔티안(1박) - 방비엥 (2박) C-Pack 빠른견적</h1>
   <div class="form-grid">
@@ -154,19 +160,21 @@
       <div class="section">
         <div class="section-label-row">
           <label>숙박팩</label>
-          <button type="button" class="room-single-btn" onclick="addSingleRoom()">싱글룸 추가</button>
-          <button type="button" class="init-btn" onclick="resetSingleRoom()">초기화</button>
+          <div>
+            <button type="button" class="room-single-btn" onclick="addSingleRoom()">싱글룸 추가</button>
+            <button type="button" class="init-btn" onclick="resetSingleRoom()">초기화</button>
+          </div>
         </div>
         <div class="option-list" id="roomList"></div>
       </div>
       <!-- 결과 견적 -->
       <div class="result-section" id="resultSection">
-        <div class="result-title">빠른 견적 금액</div>
-        <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
-        계약금 (한국에서 입금하실 금액):
-        <span id="contractPrice" class="result-big"></span><br>
-        잔금 (현지에서 달러 지불하실 금액):
-        <span id="usdPrice" class="result-big"></span>
+         <div class="result-title">빠른 견적 금액</div>
+         <div class="result-desc">(실제 견적과 상이할 수 있습니다.)</div>
+         계약금 (한국에서 입금하실 금액): 
+         <span id="contractPrice" class="result-big"></span><br>
+         잔금 (현지에서 달러 지불하실 금액): 
+         <span id="usdPrice" class="result-big"></span>
       </div>
       <!-- 연락처 정보 -->
       <div class="contact-section">
@@ -182,7 +190,6 @@
   </div>
 </div>
 <script>
-// 옵션 데이터
 const MAX_PERSON = 8;
 const extraUsdByPerson = {8:95,7:105,6:118,5:137,4:165,3:211,2:305};
 const vangviengOptions = [
@@ -206,7 +213,7 @@ const roomOptions = [
   {name: "4성급 3박", price: 159000},
   {name: "제가 예약할게요", price: 0}
 ];
-
+// 여행인원
 const personToggleGroup = document.getElementById("personToggleGroup");
 let personCount = 2;
 for(let i=2; i<=MAX_PERSON; i++) {
@@ -228,7 +235,6 @@ for(let i=2; i<=MAX_PERSON; i++) {
   }
   personToggleGroup.appendChild(btn);
 }
-
 // 가이드팩
 let guideType = "kr";
 let guidePrice = 220;
@@ -242,7 +248,6 @@ document.querySelectorAll("#guideToggleGroup .toggle-btn").forEach(btn=>{
     sendHeightToParent();
   }
 });
-
 // 선택관광(방비엥) 버튼화
 const vangviengList = document.getElementById("vangviengList");
 let vangviengChecked = Array(vangviengOptions.length).fill(false);
@@ -267,16 +272,16 @@ function renderVangviengList() {
     const unit = document.createElement("div");
     unit.className = "option-unit";
     if(vangviengChecked[idx]) {
-      unit.innerText = `$${opt.price} × ${vangviengPersons[idx]}명 = $${vangviengPersons[idx]*opt.price}`;
+      unit.innerHTML = `$${opt.price} × ${vangviengPersons[idx]}명<br>$${vangviengPersons[idx]*opt.price}`;
     } else {
       unit.innerText = `$${opt.price}/인당`;
     }
     row.appendChild(unit);
 
-    // 모바일에서만 -1명 버튼, 총인원 우상/우하 배치
     const controls = document.createElement("div");
     controls.className = "option-controls";
     if(vangviengChecked[idx]) {
+      // -1명 버튼 (모바일에서 우상단)
       const minusBtn = document.createElement("button");
       minusBtn.type = "button";
       minusBtn.className = "option-minus-btn";
@@ -292,11 +297,11 @@ function renderVangviengList() {
         e.stopPropagation();
       };
       controls.appendChild(minusBtn);
-      // total은 모바일에서 우하단, PC에서는 오른쪽에
+      // 총 가격 (모바일에서는 우측 하단에 위치)
       const total = document.createElement("div");
       total.className = "option-total";
       total.id = "vvTotal"+idx;
-      total.innerText = `$${vangviengPersons[idx]*opt.price} / 총 ${vangviengPersons[idx]}명`;
+      total.innerHTML = `$${vangviengPersons[idx]*opt.price} / 총 ${vangviengPersons[idx]}명`;
       controls.appendChild(total);
     }
     row.appendChild(controls);
@@ -310,7 +315,6 @@ window.resetVangvieng = function(){
   updateTotal();
   sendHeightToParent();
 }
-
 // 선택관광(케어팩) 버튼화
 const careList = document.getElementById("careList");
 let careChecked = Array(careOptions.length).fill(false);
@@ -335,13 +339,12 @@ function renderCareList() {
     const unit = document.createElement("div");
     unit.className = "option-unit";
     if(careChecked[idx]) {
-      unit.innerText = `$${opt.price} × ${carePersons[idx]}명 = $${carePersons[idx]*opt.price}`;
+      unit.innerHTML = `$${opt.price} × ${carePersons[idx]}명<br>$${carePersons[idx]*opt.price}`;
     } else {
       unit.innerText = `$${opt.price}/인당`;
     }
     row.appendChild(unit);
 
-    // 모바일에서만 -1명 버튼, 총인원 우상/우하 배치
     const controls = document.createElement("div");
     controls.className = "option-controls";
     if(careChecked[idx]) {
@@ -360,11 +363,10 @@ function renderCareList() {
         e.stopPropagation();
       };
       controls.appendChild(minusBtn);
-      // total
       const total = document.createElement("div");
       total.className = "option-total";
       total.id = "careTotal"+idx;
-      total.innerText = `$${carePersons[idx]*opt.price} / 총 ${carePersons[idx]}명`;
+      total.innerHTML = `$${carePersons[idx]*opt.price} / 총 ${carePersons[idx]}명`;
       controls.appendChild(total);
     }
     row.appendChild(controls);
@@ -378,7 +380,6 @@ window.resetCare = function(){
   updateTotal();
   sendHeightToParent();
 }
-
 // 숙박팩(버튼화, 단일선택)
 const roomList = document.getElementById("roomList");
 let selectedRoomIdx = null;
@@ -438,7 +439,6 @@ window.resetSingleRoom = function(){
   updateTotal();
   sendHeightToParent();
 }
-
 // 견적 계산
 function updateTotal(){
   let contract = personCount * 60000;
@@ -459,7 +459,6 @@ renderVangviengList();
 renderCareList();
 updateRoomList();
 updateTotal();
-
 // EmailJS 견적 전송
 function submitEstimate() {
   const travelDate = document.getElementById("travelDate").value.trim();
@@ -498,7 +497,6 @@ function submitEstimate() {
     alert("견적 전송에 실패했습니다. 잠시 후 다시 시도해주세요.");
   });
 }
-
 // iframe 자동 높이 parent로 전달
 function sendHeightToParent() {
   if (window.parent !== window) {
